--- a/php71/Dockerfile
+++ b/php71/Dockerfile
@@ -1,5 +1,7 @@
 FROM ubuntu:xenial
-MAINTAINER SinJie <sjzeng@gmail.com>
+MAINTAINER SinJie <sjzeng.tw@gmail.com>
+
+ENV DEBIAN_FRONTEND noninteractive
 
 ENV OS_LOCALE="en_US.UTF-8"
 RUN apt-get update && apt-get install -y locales tzdata && locale-gen ${OS_LOCALE}
@@ -11,11 +13,11 @@ RUN apt-get install -y software-properties-common python-software-properties \
         && add-apt-repository -y ppa:ondrej/php \
         && apt-get update \
         && apt-get install -y curl apache2 supervisor wget git \
-        && apt-get install -y php7.1 php7.1-mysql php7.1-cli php7.1-common php7.1-curl php7.1-gd php7.1-intl php7.1-json php7.1-mbstring php7.1-mcrypt php7.1-pgsql php7.1-xml php7.1-zip libapache2-mod-php7.1 php7.1-curl php7.1-readline \
+        && apt-get install -y php7.1 php7.1-mysql php7.1-cli php7.1-common php7.1-curl php7.1-gd php7.1-intl php7.1-json php7.1-mbstring php7.1-mcrypt php7.1-pgsql php7.1-xml php7.1-zip libapache2-mod-php7.1 php7.1-curl php7.1-readline php7.1-sqlite3 \
         && a2enmod rewrite php7.1 \
         && phpenmod mcrypt \
         && service apache2 restart \
-        && curl -sS https://getcomposer.org/installer | php --  --install-dir=/usr/local/bin --filename=composer
+        && curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
 
 RUN apt-get purge -y --auto-remove software-properties-common python-software-properties \
         && apt-get autoremove -y \
