--- a/php71/Dockerfile
+++ b/php71/Dockerfile
@@ -11,8 +11,9 @@ ENV LANG=${OS_LOCALE} \
 
 RUN apt-get install -y software-properties-common python-software-properties \
         && add-apt-repository -y ppa:ondrej/php \
+        && apt-add-repository ppa:ansible/ansible \
         && apt-get update \
-        && apt-get install -y curl apache2 supervisor wget git \
+        && apt-get install -y curl apache2 supervisor wget git ansible \
         && apt-get install -y php7.1 php7.1-mysql php7.1-cli php7.1-common php7.1-curl php7.1-gd php7.1-intl php7.1-json php7.1-mbstring php7.1-mcrypt php7.1-pgsql php7.1-xml php7.1-zip libapache2-mod-php7.1 php7.1-curl php7.1-readline php7.1-sqlite3 php-xdebug php7.1-soap php7.1-opcache php7.1-phpdbg \
         && a2enmod rewrite php7.1 \
         && phpenmod mcrypt \
