--- a/php71/Dockerfile
+++ b/php71/Dockerfile
@@ -19,7 +19,8 @@ RUN apt-get install -y software-properties-common python-software-properties \
         && phpenmod mcrypt \
         && service apache2 restart \
         && curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer \
-        && curl -sL https://deb.nodesource.com/setup_8.x | bash - && apt-get install -y nodejs
+        && curl -sL https://deb.nodesource.com/setup_8.x | bash - && apt-get install -y nodejs \
+        && npm install -g cross-env
 
 RUN apt-get purge -y --auto-remove software-properties-common python-software-properties \
         && apt-get autoremove -y \
